--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,9 +8,7 @@ spring:
     enabled: true
     lockRetryCount: -1
   datasource:
-    url: "jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_DATABASE}?reWriteBatchedInserts=true"
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: "${DB_JDBC_URL}&reWriteBatchedInserts=true"
     hikari:
       minimum-idle: 1
       maximum-pool-size: 5
