--- a/nais/app/prod.yaml
+++ b/nais/app/prod.yaml
@@ -3,7 +3,10 @@ db_highAvailability: true
 db_pointInTimeRecovery: true
 db_type: POSTGRES_16
 kafkaPool: nav-prod
+azureTenant: nav.no
 cpu: 200m
 memory: 1000Mi
 env:
   SPRING_PROFILES_ACTIVE: default
+  KAFKA_KEY_GENERATOR_AAD_CLIENT_ID: prod-gcp.paw.paw-kafka-key-generator
+  KAFKA_KEY_GENERATOR_URL: http://paw-kafka-key-generator.paw
