--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -33,3 +33,19 @@ logging.config: "classpath:logback.xml"
 aiven-kafka:
   auto-offset-reset: none
   security-protocol: SSL
+
+no.nav.security.jwt:
+  issuer:
+    azureator:
+      discoveryurl: ${AZURE_APP_WELL_KNOWN_URL}
+      accepted_audience: ${AZURE_APP_CLIENT_ID}
+  client:
+    registration:
+      kafka-key-generator-client-credentials:
+        token-endpoint-url: ${AZURE_OPENID_CONFIG_TOKEN_ENDPOINT}
+        grant-type: client_credentials
+        scope: api://${KAFKA_KEY_GENERATOR_AAD_CLIENT_ID}/.default
+        authentication:
+          client-id: ${AZURE_APP_CLIENT_ID}
+          client-secret: ${AZURE_APP_CLIENT_SECRET}
+          client-auth-method: client_secret_basic
