--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -54,4 +54,12 @@ no.nav.security.jwt:
           client-id: client-id
           client-secret: client-secret
           client-auth-method: client_secret_basic
+      arbeidssoekerregisteret-client-credentials:
+        token-endpoint-url: http://localhost:${mock-oauth2-server.port}/azureator/token
+        grant-type: client_credentials
+        scope: arbeidssoekerregisteret-client0
+        authentication:
+          client-id: client-id
+          client-secret: client-secret
+          client-auth-method: client_secret_basic
 
