--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -61,6 +61,8 @@ spec:
       rules:
         - application: paw-kafka-key-generator
           namespace: paw
+        - application: paw-arbeidssoekerregisteret-api-oppslag
+          namespace: paw
   env:
   {{#each env}}
      - name: {{@key}}
