--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -38,6 +38,9 @@ aiven-kafka:
 KAFKA_TRUSTSTORE_PATH: /
 KAFKA_CREDSTORE_PASSWORD: /
 KAFKA_KEYSTORE_PATH: /
+KAFKA_SCHEMA_REGISTRY: "url"
+KAFKA_SCHEMA_REGISTRY_USER: "user"
+KAFKA_SCHEMA_REGISTRY_PASSWORD: "pass"
 
 no.nav.security.jwt:
   issuer:
@@ -62,4 +65,3 @@ no.nav.security.jwt:
           client-id: client-id
           client-secret: client-secret
           client-auth-method: client_secret_basic
-
