--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -39,8 +39,8 @@ KAFKA_TRUSTSTORE_PATH: /
 KAFKA_CREDSTORE_PASSWORD: /
 KAFKA_KEYSTORE_PATH: /
 KAFKA_SCHEMA_REGISTRY: "url"
-KAFKA_SCHEMA_REGISTRY_USER: "user"
-KAFKA_SCHEMA_REGISTRY_PASSWORD: "pass"
+KAFKA_SCHEMA_REGISTRY_USER: ""
+KAFKA_SCHEMA_REGISTRY_PASSWORD: ""
 
 no.nav.security.jwt:
   issuer:
