Ack feil ved behanding av sykepengesoknad i dev-gcp

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,6 +29,7 @@ management:
     metrics.export.enabled: true
 
 logging.config: "classpath:logback.xml"
+nais.cluster: ${NAIS_CLUSTER_NAME}
 
 aiven-kafka:
   auto-offset-reset: none
