--- a/nais/app/naiserator.yaml
+++ b/nais/app/naiserator.yaml
@@ -25,6 +25,7 @@ spec:
   azure:
     application:
       enabled: true
+      allowAllUsers: true
       tenant: {{azureTenant}}
   prometheus:
     enabled: true
